TODO
- fix procgen in core worlds
- add a system for modders to autogenerate conditions if they use post new game procgen
- all the 3.0 planet shit
- add custom archipelago cond pool

WIP Version 2.0.2
- minor logging tweaks
- nerfed fluo giant from +3 to +2
- reduced hycean spawn chance
- allow rare ores on sanctum planet

Version 2.0.1 - 11/07/2024
- Added Thin Atmosphere to Dust worlds to match their description.
- Pre-Collapse Cryosanctum now reduces max industries by 1.
- Added a new easter egg name.

Version 2.0.0 - 28/06/2024
- Added 4 new planets:
    . Hycean worlds with a unique condition pool (special thanks to TouchOfVanilla for the original idea and lots of feedback).
    . The Fluorescent Giant, a new unique planet that spawns once per sector (image source: Tartiflette's Texture Pack).
    . Savannah and Alpine worlds, two new variants for Jungle and Tundra worlds (image source: TextureForPlanets).
- Added a new unique condition: Pre-Collapse Cryosanctum (special thanks to SirHartley for help with the implementation).
- Added stellar clouds (purely cosmetic, image source: Tartiflette's Texture Pack).
- Added organics to Methane worlds.
- Overhauled the spawn system for certain planets:
    . US_volcanic now has the stats of lava_minor instead of lava (as originally intended).
    . Reorganized cat_hab3 fixing Terran Eccentric worlds having extremely low spawn rates.
    . Fixed US_lifeless and US_crimson having swapped categories.
    . Renamed Arid Lifeless to Lifeless (since they're the same now).
    . Fixed US_crimson not matching the spawn weights of US_lifeless.
- Buffed Military Virus:
    . Weapon production is now +4 (was +3).
    . Ground defense is now -40% (was -50%).
    . Population growth is now (colony size + 1) * -2 (was colony size * -3).
- Terran and Continental worlds can no longer have Spores or be turned into Magnetic worlds.
- Unique planetary conditions are now always the rightmost ones.